# GithubTrending

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_GHPAGES.md  SECURITY.md  generate_history_stats.py  github_trending_cards.css  github_trending_cards.html  github_trending_cards.py  index.html  news-feed.xml  pyproject.toml  requirements-dev.txt  requirements.txt  robots.txt  sitemap.xml  test_network.py  upload_html.py  validate_yaml.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  gen-page.yml  generate_trending.yml  static.yml
.trae/rules/: project_rules.md
assets/: app.js  index.html  styles.css
cards/2026-07-24/: manifest.json
data/: latest.json
data/news/: latest.json
history/: index.html
history/2025-07-10/: index.html  metadata.json
history/2025-07-12/: metadata.json
history/2025-07-19/: index.html  metadata.json
history/2025-07-26/: metadata.json
history/2025-08-02/: index.html  metadata.json
history/2025-08-09/: index.html  metadata.json
history/2025-08-16/: index.html  metadata.json
history/2025-08-20/: index.html  metadata.json
history/2025-08-21/: index.html  metadata.json
history/2025-08-22/: index.html  metadata.json
history/2025-08-23/: index.html  metadata.json
history/2025-08-24/: metadata.json
history/2025-08-25/: metadata.json
history/2025-08-26/: index.html  metadata.json
scripts/: check_network.py  generate_history_stats.py
tests/: test_github_trending_cards.py
(+475 files in other folders)
