[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-trending-radar"
version = "2.0.0"
description = "A Chinese GitHub Trending radar with open JSON and RSS feeds."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "beautifulsoup4>=4.12.0",
  "cairosvg>=2.7.0",
  "lxml>=4.9.0",
  "openai>=1.0.0",
  "pillow>=10.0.0",
  "requests>=2.31.0",
  "segno>=1.6.0",
]

[project.scripts]
github-trending-radar = "github_trending.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
